--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
     "storybook": "storybook dev -p 6006",
-    "build-storybook": "storybook build"
+    "build-storybook": "storybook build",
+    "test": "vitest"
   },
   "dependencies": {
     "react": "^18.2.0",
@@ -25,6 +26,8 @@
     "@storybook/react": "^8.1.3",
     "@storybook/react-vite": "^8.1.3",
     "@storybook/test": "^8.1.3",
+    "@testing-library/jest-dom": "^6.4.5",
+    "@testing-library/react": "^15.0.7",
     "@types/react": "^18.2.66",
     "@types/react-dom": "^18.2.22",
     "@typescript-eslint/eslint-plugin": "^7.2.0",
@@ -34,10 +37,12 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.6",
     "eslint-plugin-storybook": "^0.8.0",
+    "jsdom": "^24.1.0",
     "sass": "^1.77.2",
     "storybook": "^8.1.3",
     "typescript": "^5.2.2",
     "vite": "^5.2.0",
-    "vite-plugin-react-js-support": "^1.0.7"
+    "vite-plugin-react-js-support": "^1.0.7",
+    "vitest": "^1.6.0"
   }
 }
